# InertialAR

./: README.md  env.txt  pyproject.toml  setup.py
InertialAR/: __init__.py  attention.py  config.py  diffusion_loss.py  ema.py  generate_b3lyp.py  generate_drug.py  generate_qm9.py  inertial_ar_dataset.py  layers.py  lr_scheduler.py  model.py  rope.py  splitters.py  train_ddp.py  trainer_ddp.py  transformer_encoder.py
InertialAR/evaluation/: __init__.py  eval.py  eval_edm.py
InertialAR/evaluation/eval_follow_edm/: __init__.py  analyze.py  bond_analyze.py  datasets_config.py  rdkit_functions.py
InertialTransformer/: utils.py
InertialTransformer/datasets/: __init__.py  count_aliphatic_ring.py  count_aromatic_heterocycles.py  count_carbon_functional_group.py  count_halogen.py  count_nitrogen_functional_group.py  count_oxygen_functional_group.py  count_phosphorus_functional_group.py  count_sulfur_functional_group.py  dataset_b3lyp.py  dataset_drug.py  dataset_qm9.py  dataset_utils.py  functional_group_extract_b3lyp.py  functional_group_extract_drug.py  functional_group_extract_qm9.py  functional_group_mapping.py  tokenization_dictionary.py
docs/: DATA_AND_CHECKPOINTS.md  ENVIRONMENT.md
scripts/: train_b3lyp.sh  train_drug.sh  train_qm9.sh
scripts/evaluation/: evaluate_generated.sh
scripts/generation/: generate_b3lyp.sh  generate_drug.sh  generate_qm9.sh
