[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inertialar"
version = "0.1.0"
description = "Autoregressive 3D molecule generation with inertial frames"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["InertialAR*", "InertialTransformer*"]
